# heb-piper-tts-gemma-g2p-onnx

./: .gitignore  README.md  pyproject.toml
src/: export.py  llm.py  main.py
